# gf-paper-figures

./: .gitignore  CMakeLists.txt
ext-projects/: CMakeLists.txt
ext-projects/cmake-files/: BTools.cmake  magLac-black-jack.cmake  magLac-poker.cmake
ext-projects/cmake-files/graph-flow/: chan-vese-alike.cmake  graph-cut-alike.cmake
figures/: export.sh  utils.sh
figures/chan-vese-alike/: CMakeLists.txt  highlight-contour.cpp  highlight-contour.sh
figures/chan-vese-alike/branch/: exp-branch-noisy.sh  highlight-branch.sh
figures/chan-vese-alike/line-with-cuts/: exp-line-with-cuts-noisy.sh  highlight-line.sh
figures/chan-vese-alike/simple-geometry/: exp-simple-geometry-noisy.sh  highlight-geometry.sh
figures/chan-vese-alike/simple-geometry/input/: simple-geometry-noisy.pgm  simple-geometry.pgm
figures/coco-experiment/: coco-experiment.sh  get-seeds.sh  ids.sh
figures/coco-experiment/instance-generator/: config.py  generator.py
figures/coco-experiment/python-scripts/: compute-metrics.py  plot-tangent-profile.py  scatter-box-plot.py
figures/coco-experiment/util-apps/: interactive-seg.sh
figures/coco-experiment/util-apps/correction-report/: CMakeLists.txt  correction-report.cpp
figures/coco-experiment/util-apps/exp-seg-mask/: CMakeLists.txt  export-seg-mask.cpp
figures/completion/: completion.sh
figures/contour-correction/: contour-correction.sh
figures/didactic-one-iteration/: CMakeLists.txt  didactic-one-iteration.cpp  didactic-one-iteration.sh
figures/dispersion-cost/: CMakeLists.txt
figures/dynamic-radius/find-balance-radius/: CMakeLists.txt
figures/dynamic-radius/find-balance-radius/include/: energy.h
figures/dynamic-radius/length-ratio-decrease/: length-ratio-decrease.cpp  length-ratio-decrease.sh
figures/dynamic-radius/limit-radius/: CMakeLists.txt  limit-radius-plot.sh  limit-radius.sh
figures/hausdorff-distance/: CMakeLists.txt  hausdorff-distance.cpp  hausdorff-distance.sh  linear-plot.sh  radial-plot.sh
figures/hausdorff-distance/flow-best-of-neighborhood/: exp-flow-best-of-neigh.sh
figures/hausdorff-distance/flow-best-of-neighborhood/instance-generator/: __init__.py  config.py  generator.py
figures/intrinsic-elastica-cost/: CMakeLists.txt  cost-map.sh  export.sh  flow.sh  intrinsic-elastica-cost.cpp
figures/intrinsic-elastica-cost/include/: CostFunction.h  FlowGraph.h  InputData.h  KhalimskyEquivalent.h  display.h  utils.h
figures/intrinsic-elastica-cost/src/: CostFunction.cpp  FlowGraph.cpp  display.cpp  estimators.cpp  inputReader.cpp  utils.cpp
figures/length-ratio-decrease/: CMakeLists.txt  length-ratio-decrease.cpp  length-ratio-decrease.sh
figures/limit-radius/: generate-disk.cpp  limit-radius.sh
figures/metric-validation/: CMakeLists.txt
figures/metric-validation/include/: FlowGraph.h  LinelData.h
figures/metric-validation/src/: FlowGraph.cpp  estimators.cpp
figures/need-for-squared-curvature/: CMakeLists.txt  build-plot-nfsq.sh
figures/need-for-squared-curvature/video/: join-gifs.sh  make-plot-frames.sh
figures/need-for-squared-curvature/video/ext/GVFM-master/: gvfm_frame.gp  gvfm_plot.gp
figures/no-neighborhood-flow/: no-neighborhood-flow.sh
figures/no-neighborhood-flow-improve-always/: no-neighborhood-flow-improve-always.sh
figures/ring/: ring.cpp  ring.sh
figures/sandbox/completion/input/: brown-snake.xml  pear.xml
figures/sandbox/contour-correction/: contour-correction.sh
figures/sandbox/dispersion-cost/: about-this-experiment.txt
figures/sandbox/dispersion-cost-cos/: CMakeLists.txt  about-this-experiment.txt  dispersion-cost-cos.cpp
figures/sandbox/dispersion-cost-cos/include/: LinelData.h
figures/sandbox/dispersion-cost-cos/src/: FlowGraph.cpp
figures/sandbox/dispersion-cost/include/: FlowGraph.h  estimators.h
figures/sandbox/dynamic-radius/: about-this-experiment.txt
figures/sandbox/dynamic-radius/find-balance-radius/: CMakeLists.txt  find-balance-radius.cpp  find-balance-radius.sh
figures/sandbox/dynamic-radius/find-balance-radius/src/: energy.cpp
figures/sandbox/dynamic-radius/length-ratio-decrease/: CMakeLists.txt
figures/sandbox/dynamic-radius/limit-radius/: limit-radius-plot.sh  limit-radius.sh
figures/sandbox/ideal-cost/: CMakeLists.txt  about-this-experiment.txt  ideal-cost.cpp
figures/sandbox/ideal-cost/include/: FlowGraph.h
figures/sandbox/ideal-cost/src/: FlowGraph.cpp
figures/sandbox/intrinsic-elastica-cost/: CMakeLists.txt  about-this-experiment.txt  flow.sh  intrinsic-elastica-cost.cpp  updateMinMax.sh
figures/sandbox/intrinsic-elastica-cost/include/: CostData.h  EstimationData.h  FlowGraph.h  InputData.h  KhalimskyEquivalent.h  OptRegions.h  display.h  utils.h
figures/sandbox/intrinsic-elastica-cost/src/: KhalimskyEquivalent.cpp  OptRegions.cpp  utils.cpp
figures/sandbox/metric-validation/: about-this-experiment.txt  metric-validation.cpp
figures/sandbox/need-for-squared-curvature/: best-segmentation.cpp  generate-data.sh  need-for-squared-curvature.cpp
figures/sandbox/need-for-squared-curvature/include/: RoundedRect.h  energy.h
figures/sandbox/need-for-squared-curvature/src/: RoundedRect.cpp
figures/sandbox/need-for-squared-curvature/video/: best-seg-video.sh  make-plot-frames.sh
figures/sandbox/no-neighborhood-flow-improve-always/: no-neighborhood-flow-improve-always.sh
figures/sandbox/ring/: CMakeLists.txt
figures/sandbox/threshold-dynamics/: CMakeLists.txt  threshold-dynamics.cpp
figures/shape-flow/: build-plot-bars.sh  build-plot-elastica.sh  running-time.sh  select-summaries-r32.sh  select-summaries-r8.sh  utils.sh
figures/shape-flow/flow-always-improve/: exp-flow-always-improve.sh
figures/shape-flow/flow-always-improve/instance-generator/: config.py  generator.py
figures/shape-flow/flow-best-of-neighborhood/instance-generator/: config.py
figures/threshold-dynamics/: CMakeLists.txt  threshold-dynamics.cpp
figures/zero-level-set/: CMakeLists.txt  zero-level-set.cpp  zero-level-set.sh
plot-scripts/: graph-plot.sh
repGen/template/coco-exp/: report_template.html
(+7 files in other folders)
